@@ -56,6 +56,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-11031. Design Document for Credential Provider API.
     (Larry McCay via cnauroth)
 
+    HADOOP-12794. Support additional compression levels for GzipCodec.
+    (Ravi Mutyala via junping_du)
+
   OPTIMIZATIONS
 
     HADOOP-7713. dfs -count -q should label output column (Jonathan Allen
